fix: contrast issues in time since component

--- a/src/components/TimeSince/time-since.module.scss
+++ b/src/components/TimeSince/time-since.module.scss
@@ -10,7 +10,7 @@
         font-size: 1.4rem;
         visibility: hidden;
         background-color: var(--fg-1);
-        color: var(--bg-1);
+        color: var(--contrast-bg);
         text-align: center;
         padding: 0.4rem 0.8rem;
         border-radius: var(--radius-xs);
